ast/src/snapshots/ast__parser__tests__range_snapshots@literal_exclusive.snap
---
source: ast/src/parser.rs
expression: "parse_expr(\"let _ = (0..1)\")"
---
[
    FunctionDefinition(
        FunctionDefinition {
            visibility: Private(
                Private {
                    location: Location(
                        0..2,
                    ),
                },
            ),
            external: false,
            name: Identifier {
                name: "main",
                location: Location(
                    3..7,
                ),
            },
            parameters: [],
            return_type: Scalar(
                ScalarType {
                    name: "void",
                    location: Location(
                        13..17,
                    ),
                },
            ),
            block: Block {
                statements: [
                    VariableDeclaration(
                        VariableDeclaration {
                            name: Identifier {
                                name: "_",
                                location: Location(
                                    24..25,
                                ),
                            },
                            variable_type: None,
                            value: Range(
                                Range {
                                    lower: Literal(
                                        Int(
                                            IntLiteral {
                                                value: 0,
                                                location: Location(
                                                    29..30,
                                                ),
                                            },
                                        ),
                                    ),
                                    upper: Literal(
                                        Int(
                                            IntLiteral {
                                                value: 1,
                                                location: Location(
                                                    32..33,
                                                ),
                                            },
                                        ),
                                    ),
                                    inclusive: false,
                                    location: Location(
                                        29..33,
                                    ),
                                },
                            ),
                            is_const: false,
                            location: Location(
                                20..33,
                            ),
                        },
                    ),
                ],
                location: Location(
                    18..36,
                ),
            },
            location: Location(
                0..36,
            ),
        },
    ),
]
