ast/src/snapshots/ast__parser__tests__trait_snapshots@empty.snap
---
source: ast/src/parser.rs
expression: "parse(\"trait Add { }\")"
---
[
    TypeDefinition(
        Trait(
            TraitDefinition {
                name: Identifier {
                    name: "Add",
                    location: Location(
                        6..9,
                    ),
                },
                type_parameters: [],
                methods: [],
                location: Location(
                    0..13,
                ),
            },
        ),
    ),
]
