ast/src/snapshots/ast__parser__tests__trait_snapshots@generics.snap
---
source: ast/src/parser.rs
expression: "parse(\"trait Add<T1, T2> { }\")"
---
[
    TypeDefinition(
        Trait(
            TraitDefinition {
                name: Identifier {
                    name: "Add",
                    location: Location(
                        6..9,
                    ),
                },
                type_parameters: [
                    TypeParameter {
                        name: Identifier {
                            name: "T1",
                            location: Location(
                                10..12,
                            ),
                        },
                    },
                    TypeParameter {
                        name: Identifier {
                            name: "T2",
                            location: Location(
                                14..16,
                            ),
                        },
                    },
                ],
                methods: [],
                location: Location(
                    0..21,
                ),
            },
        ),
    ),
]
