ast/src/snapshots/ast__parser__tests__trait_snapshots@method_impl.snap
---
source: ast/src/parser.rs
expression: "parse(\"trait Add { pub fn add(other: int) -> int { self + other } }\")"
---
[
    TypeDefinition(
        Trait(
            TraitDefinition {
                name: Identifier {
                    name: "Add",
                    location: Location(
                        6..9,
                    ),
                },
                type_parameters: [],
                methods: [
                    TraitMethodDefinition {
                        visibility: Public(
                            Public {
                                location: Location(
                                    12..15,
                                ),
                            },
                        ),
                        name: Identifier {
                            name: "add",
                            location: Location(
                                19..22,
                            ),
                        },
                        parameters: [
                            Parameter {
                                name: Identifier {
                                    name: "other",
                                    location: Location(
                                        23..28,
                                    ),
                                },
                                param_type: Scalar(
                                    ScalarType {
                                        name: "Int32",
                                        location: Location(
                                            30..33,
                                        ),
                                    },
                                ),
                                location: Location(
                                    23..33,
                                ),
                            },
                        ],
                        type_parameters: [],
                        return_type: Scalar(
                            ScalarType {
                                name: "Int32",
                                location: Location(
                                    38..41,
                                ),
                            },
                        ),
                        block: Some(
                            Block {
                                statements: [
                                    Expression(
                                        Call(
                                            Call {
                                                callee: Some(
                                                    Variable(
                                                        Variable {
                                                            name: Identifier {
                                                                name: "self",
                                                                location: Location(
                                                                    44..48,
                                                                ),
                                                            },
                                                        },
                                                    ),
                                                ),
                                                name: Identifier {
                                                    name: "+",
                                                    location: Location(
                                                        49..50,
                                                    ),
                                                },
                                                arguments: [
                                                    Variable(
                                                        Variable {
                                                            name: Identifier {
                                                                name: "other",
                                                                location: Location(
                                                                    51..56,
                                                                ),
                                                            },
                                                        },
                                                    ),
                                                ],
                                                type_parameters: [],
                                                location: Location(
                                                    44..51,
                                                ),
                                            },
                                        ),
                                    ),
                                ],
                                location: Location(
                                    42..58,
                                ),
                            },
                        ),
                        location: Location(
                            16..58,
                        ),
                    },
                ],
                location: Location(
                    0..60,
                ),
            },
        ),
    ),
]
