ast/src/snapshots/ast__parser__tests__type_alias_snapshots@generic.snap
---
source: ast/src/parser.rs
expression: "parse(\"type A = B<C>\")"
---
[
    TypeDefinition(
        Alias(
            AliasDefinition {
                name: Identifier {
                    name: "A",
                    location: Location(
                        5..6,
                    ),
                },
                definition: Generic(
                    GenericType {
                        name: Identifier {
                            name: "B",
                            location: Location(
                                9..10,
                            ),
                        },
                        type_params: [
                            Scalar(
                                ScalarType {
                                    name: "C",
                                    location: Location(
                                        11..12,
                                    ),
                                },
                            ),
                        ],
                        location: Location(
                            10..13,
                        ),
                    },
                ),
                location: Location(
                    0..13,
                ),
            },
        ),
    ),
]
