ast/src/snapshots/ast__parser__tests__type_alias_snapshots@scalar.snap
---
source: ast/src/parser.rs
expression: "parse(\"type A = B\")"
---
[
    TypeDefinition(
        Alias(
            AliasDefinition {
                name: Identifier {
                    name: "A",
                    location: Location(
                        5..6,
                    ),
                },
                definition: Scalar(
                    ScalarType {
                        name: "B",
                        location: Location(
                            9..10,
                        ),
                    },
                ),
                location: Location(
                    0..10,
                ),
            },
        ),
    ),
]
